used SonarQube and cleaned code